--- a/bearblog-theme.css
+++ b/bearblog-theme.css
@@ -337,8 +337,8 @@ footer {
 form[class="email-signup"] {
     display: flex;
     flex-direction: column;
-    align-items: center;
-    gap: 0.75rem;
+    align-items: flex-start;
+        gap: 0.5rem;
     margin: 1.5rem 0;
 }
 
@@ -390,7 +390,7 @@ form[class="email-signup"] input[type="submit"]:focus {
 @media (min-width: 640px) {
     form[class="email-signup"] {
         flex-direction: row;
-        justify-content: center;
+        justify-content: flex-start;
     }
 
     form[class="email-signup"] input[type="email"] {
